add test unitaire to the back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 upload-dir=images
 
-
 logging.level.root=info
 #logging.level.tn.esprit.spring.service= FATAL
 logging.logback.rollingpolicy.max-file-size= 100KB
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %-10d - %msg %n
 logging.pattern.file= %msg %n
 logging.file.name=c:/logging/spring_file.log
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ameni.jouini@esprit.tn
+spring.mail.password=sferfwdsemvgdiup
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
